# natrium3

./: Cargo.toml  README.md
assets/: asset_registry.json
examples/sandbox/: main.rs  sandbox.rs
natrium3_derive/: Cargo.toml
natrium3_derive/src/: lib.rs
src/: app.rs  asset.rs  chrono.rs  core.rs  ecs.rs  lib.rs
src/asset/: context.rs  registry.rs  submod.rs  text.rs
src/chrono/: accumulator.rs  timekeeper.rs
src/core/: app.rs  asset.rs  asset_context.rs  asset_registry.rs  context_info.rs  layer.rs  text_asset.rs  window_context.rs
src/ecs/: archetype.rs  component.rs  entity.rs
