[package]
name = "natrium3"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0-only"

[lib]
name = "natrium3"

[[example]]
name = "sandbox"
path = "examples/sandbox/sandbox.rs"

[dependencies]
winit = "0.30.12"
spin_sleep = "1.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.22.0", features = ["v4", "serde"] } 
downcast-rs = "2.0.2"

